--- a/Installer/Source/ConfigureWindowController.xib
+++ b/Installer/Source/ConfigureWindowController.xib
@@ -264,27 +264,22 @@
                     </textFieldCell>
                 </textField>
                 <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" alphaValue="0.90000000000000002" id="JIP-Dg-mw9">
-                    <rect key="frame" x="19" y="63" width="104" height="34"/>
+                    <rect key="frame" x="20" y="58" width="84" height="29"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="FriendsJamf" id="jRx-EQ-s1l"/>
                 </imageView>
-                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" alphaValue="0.80000000000000004" id="eGl-qz-BcK">
-                    <rect key="frame" x="155" y="60" width="139" height="42"/>
+                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" alphaValue="0.66000000000000003" id="eGl-qz-BcK">
+                    <rect key="frame" x="132" y="58" width="111" height="32"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="FriendsMosyle" id="SYt-xn-Fod"/>
                 </imageView>
                 <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" alphaValue="0.69999999999999996" id="rvF-ex-lYd">
-                    <rect key="frame" x="326" y="63" width="123" height="35"/>
+                    <rect key="frame" x="269" y="58" width="114" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="FriendsKandji" id="Vx2-X1-Mq9"/>
                 </imageView>
-                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" alphaValue="0.66000000000000003" id="DFQ-dM-v5o">
-                    <rect key="frame" x="676" y="64" width="122" height="36"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="FriendsKolide" id="pXi-1R-DCM"/>
-                </imageView>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" alphaValue="0.59999999999999998" id="WiA-pD-bqV">
-                    <rect key="frame" x="305" y="120" width="203" height="29"/>
+                    <rect key="frame" x="305" y="100" width="203" height="29"/>
                     <autoresizingMask key="autoresizingMask"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="Mahalo to the &quot;Friends Objective-See&quot;" id="VkX-a3-FNr">
                         <font key="font" size="15" name="AvenirNextCondensed-Regular"/>
@@ -293,9 +288,19 @@
                     </textFieldCell>
                 </textField>
                 <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" alphaValue="0.75" id="OMX-0B-6L4">
-                    <rect key="frame" x="477" y="47" width="181" height="65"/>
+                    <rect key="frame" x="408" y="46" width="161" height="59"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="FriendsMacPaw" id="1PS-Hq-g5I"/>
+                </imageView>
+                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" alphaValue="0.66000000000000003" id="eCe-fo-VIF">
+                    <rect key="frame" x="712" y="64" width="80" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="FriendsFleet" id="hIF-kk-NhY"/>
+                </imageView>
+                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" alphaValue="0.66000000000000003" id="DFQ-dM-v5o">
+                    <rect key="frame" x="579" y="61" width="122" height="34"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="FriendsKolide" id="pXi-1R-DCM"/>
                 </imageView>
             </subviews>
             <point key="canvasLocation" x="698" y="1342"/>
@@ -309,11 +314,12 @@
     </objects>
     <resources>
         <image name="BlockBlock" width="1230" height="193"/>
+        <image name="FriendsFleet" width="236" height="96"/>
         <image name="FriendsJamf" width="328" height="114"/>
         <image name="FriendsKandji" width="1200" height="303"/>
         <image name="FriendsKolide" width="636" height="216"/>
         <image name="FriendsMacPaw" width="2034" height="335"/>
-        <image name="FriendsMosyle" width="925" height="242"/>
+        <image name="FriendsMosyle" width="963" height="265"/>
         <image name="Icon" width="769" height="769"/>
         <image name="Love" width="256" height="256"/>
         <image name="SystemPrefs" width="500" height="429"/>
